# autosort-scripts

./: .gitignore  .sortignore  .sortignore.example  LICENSE  README.md  TROUBLESHOOTING.md  analytics_collector.py  autosort.py  autosort_config_backup_20251026_181202.json  autosort_gui.py  example_custom_config.json  firebase_analytics_client.py  firebase_backend_handoff.md  firebase_quick_handoff.md  github_issues_reporter.py  install_dependencies.command  pyproject.toml  requirements.txt  run-autosort-gui.command  run-autosort.command
[deprecated] legacy/: autosort_legacy.py
legacy/: LEGACY-README.md  requirements-gui-legacy.txt
src/autosort/: __init__.py  __main__.py  app.py  app.tcss  cli.py  console.py
src/autosort/core/: config.py  organizer.py  paths.py  watcher.py
src/autosort/data/: default_config.json
src/autosort/services/: launchd.py  notify.py  undo.py
src/core/: config_manager.py  file_organizer.py  path_manager.py
src/ui/: cli_interface.py  gui_interface.py
src/utils/: accessibility.py  analytics.py  logger.py  undo_manager.py
