[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosort"
version = "3.1.0"
description = "Automatic file organizer for macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Gboy" }]
keywords = ["file-organizer", "macos", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=1.0",
    "watchdog>=4.0",
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/GXboy12345/autosort-scripts"
Repository = "https://github.com/GXboy12345/autosort-scripts"
Issues = "https://github.com/GXboy12345/autosort-scripts/issues"

[project.scripts]
autosort = "autosort.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/autosort"]
